# pipecat.server

./: .env.example  .gitignore  DEPLOY.md  HERMES.md  README.md  SINGLE_PORT_REPORT.md  install.sh  pyproject.toml  restart_prebuilt.sh  restart_webrtc_client.sh  run.sh
client/javascript/: index.html  package-lock.json  package.json
client/javascript/src/: app.js  config.js  style.css
skills/pipecat-realtime-voice/: SKILL.md
skills/pipecat-realtime-voice/references/: 00-index.md  aiortc-cli-browser-test.md  chrome-cdp-multi-tab-targeting.md  cloud-browser-dtls-race.md  cloud-browser-testing.md  comparison-driven-cleanup.md  deepseek-litellm-reasoning-content.md  events-panel-integration.md  pipecat-1.4.0-api-gotchas.md  pipecat-1.4.0-frame-and-vad-changes.md  pipecat-llm-pipeline-shutdown-race.md  prebuilt-package-decision.md  prebuilt-text-echo-bot-text-processor.md  prebuiltui-bot-output-mechanism.md  server-management-pitfalls.md  stt-accumulation-segmented-stt-service.md  test-audio-module-isolation.md  vite-host-binding.md  websocket-test-page-and-autoplay.md
skills/pipecat-realtime-voice/scripts/: cleanup_server.sh  verify_server.py  webrtc-test-client.py
skills/pipecat-server-deployment/: SKILL.md
skills/pipecat-voice-agent/: SKILL.md
skills/pipecat-voice-agent-project/: SKILL.md
src/: bot.py  bot_js_client.py  pipeline.py  server_prebuilt.py
src/core/: pipeline.py  webrtc_server.py
src/helpers/: test_audio.py
src/serializers/: __init__.py  pcm.py
src/services/: edge_tts.py  llm.py  whisper_stt.py
(+18 files in other folders)
